    -0.6.8  - scan for redvypr modules updated, they need now a flag redvypr_devicemodule to be identified
            - line plot has a dt_update
    -0.6.7  - improvements in plot_widgets (context menu, units in legend)
            - added redvypr_graph_widget.set_line(), redvypr_graph_widget.add_line()
            - cleaned up a lot of debugging information in several files
            - added redvypr.get_all_devicenames()
            - network_device updated to configuration dictionaries with template
            - config gui clean up
            - config gui is smarter regarding apply and remove
    -0.6.6  - rawdatareplay: replace_time flag
            - plot_widgets: clear buffer is now also clearing the line to plot
    -0.6.5  - repaired numpacket in distribute_data
            - rawdatareplay works now with indices
    -0.6.4  - rawdatareplay packetreader improved for potential thread based file inspection and user choice of packets to be read
            - added last publishing device (lpd) to treat_datatict(). This allows to have the future feature of subscribing to a local publishing device
    -0.6.3  - major cleanup of config utilities and rawdatareplay
    -0.6.2  - changed regular expression from non-ascii § to {}
    -0.6.0  - added regular expressions into redvypr_address
            - command line arguments can now be more elaborate python data structure, that can be parsed by ast.literal_eval
    -0.5.4  - added multiprocessing.freeze_support(), to have multiprocessing work with windows and pyinstaller
            - test_device has sine_rand datakey
    -0.5.3  - changed utils.py into configdata.py, added folder utils and utils/csv2dict
            - redvypr.rem_device() added and cleaned redvyprWidget.closeTab()
            - distribute_data has now connection to main thread via redvypr.redvyprqueue to check for updates done by main thread
            - maximum device threshold added: config_template['redvypr_device']['max_devices']  = 1