@@ -1,1 +1,1 @@
-0.6.7
+0.6.8
