@@ -1,1 +1,2 @@
 from . import test_device
+redvypr_devicemodule = True
