@@ -1,5 +1,6 @@
     -0.6.8  - scan for redvypr modules updated, they need now a flag redvypr_devicemodule to be identified
             - line plot has a dt_update
+            - added to datapackets ['_redvypr'][locpub] and ['_redvypr'][pub], the local publishing device and the publishing device
     -0.6.7  - improvements in plot_widgets (context menu, units in legend)
             - added redvypr_graph_widget.set_line(), redvypr_graph_widget.add_line()
             - cleaned up a lot of debugging information in several files
